# asyncgi

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build_and_test.yml
cmake/: asyncgiConfig.cmake.in
examples/: CMakeLists.txt  example_asio_dispatcher.cpp  example_client.cpp  example_client_in_processor.cpp  example_guestbook.cpp  example_hello_world.cpp  example_request_processor.cpp  example_response_dispatching_asio_task.cpp  example_response_wait_future.cpp  example_route_context.cpp  example_route_matcher.cpp  example_route_params.cpp  example_route_params_user_defined_types.cpp  example_route_specification.cpp  example_router.cpp  example_timer.cpp
functional_tests/: lunchtoast.cfg  nginx_linux.conf  nginx_windows.conf
functional_tests/asio_dispatcher/: test.toast
functional_tests/client/: test.toast
functional_tests/client_in_processor/: test.toast
functional_tests/exception_in_request_handler/: test.toast
functional_tests/hello_world/: test.toast
functional_tests/request_processor/: test.toast
functional_tests/response_wait_future/: test.toast
functional_tests/route_context/: test.toast
functional_tests/route_matchers/: test.toast
functional_tests/route_params/: test.toast
functional_tests/route_params_user_defined_types/: test.toast
functional_tests/router/: test.toast
functional_tests/timer/: test.toast
include/asyncgi/: app.h  asiodispatcher.h  asyncgi.h  asyncgi_fwd.h  client.h  errors.h  events.h  iapp.h  iasiodispatcher.h  iclient.h  io.h  iruntime.h  iserver.h  itimer.h  request.h  requestprocessor.h  requestrouter.h  responder.h  response.h  router.h  server.h  taskcontext.h  testserver.h  timer.h  types.h
include/asyncgi/detail/: asio_namespace.h  eventhandlerproxy.h  irequestprocessor.h  iresponsesender.h  itimerservice.h  lazyinitialized.h  responsecontext.h  routeresponsecontextaccessor.h  serviceholder.h  utils.h
src/: accesspermission.h  alias_unixdomain.h  app.cpp  asio_error.h  asiodispatcher.cpp  asiodispatcher.h  asiodispatcherservice.cpp  asiodispatcherservice.h  client.cpp  client.h  clientconnection.cpp  clientconnection.h  clientservice.cpp  clientservice.h  connection.cpp  connection.h  connectionfactory.cpp  connectionfactory.h  connectionlistener.cpp  connectionlistener.h  connectionlistenerfactory.cpp  connectionlistenerfactory.h  connectionprocessor.cpp  connectionprocessor.h  errors.cpp  eventhandlerproxy.cpp  io.cpp  ioservice.cpp  ioservice.h  iruntime.h  multithreadedruntime.cpp  multithreadedruntime.h  request.cpp  requestcontext.cpp  requestcontext.h  response.cpp  responsecontext.cpp  responsecontext.h  responsesender.cpp  responsesender.h  (+16 more)
test_examples/: CMakeLists.txt  test_exception_in_request_handler.cpp
